<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.glasgowmusicguide.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/business_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/large_image_margin"
            tools:src="@drawable/barras_large"/>

        <TextView
            android:id="@+id/business_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_image_margin"
            android:textAppearance="@style/detailNameFontStyle"
            tools:text="@string/barras_name"/>

        <TextView
            android:id="@+id/business_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_image_margin"
            android:layout_marginTop="@dimen/infoTextMargin"
            android:textAppearance="@style/detailInfoFontStyle"
            android:autoLink="map"
            android:textColorLink="@android:color/holo_blue_dark"
            tools:text="@string/barras_address"/>

        <TextView
            android:id="@+id/business_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_image_margin"
            android:layout_marginTop="@dimen/infoTextMargin"
            android:textAppearance="@style/detailInfoFontStyle"
            android:autoLink="phone"
            android:textColorLink="@android:color/holo_blue_dark"
            tools:text="@string/barras_phone"/>

        <TextView
            android:id="@+id/business_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_image_margin"
            android:layout_marginTop="@dimen/infoTextMargin"
            android:textAppearance="@style/detailInfoFontStyle"
            android:autoLink="web"
            android:textColorLink="@android:color/holo_blue_dark"
            tools:text="@string/barras_web"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/lineWidth"
            android:layout_marginTop="@dimen/lineMarginTop"
            android:layout_marginStart="@dimen/large_image_margin"
            android:layout_marginEnd="@dimen/large_image_margin"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/business_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_image_margin"
            android:layout_marginEnd="@dimen/large_image_margin"
            android:layout_marginTop="@dimen/infoTextMargin"
            android:layout_marginBottom="@dimen/large_image_margin"
            android:textAppearance="@style/detailDescriptionFontStyle"
            tools:text="@string/barras_description"/>

    </LinearLayout>

</ScrollView>


