<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listItemLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/business_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:src="@drawable/barras"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/business_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/listNameFontStyle"
            tools:text="@string/barras_name" />

        <TextView
            android:id="@+id/business_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/listMinorFontStyle"
            tools:text="@string/barras_address" />

        <TextView
            android:id="@+id/business_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/listMinorFontStyle"
            tools:text="@string/barras_phone" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_more_vert_black_24dp"/>

</LinearLayout>


